Fix horizontal overflow

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -180,6 +180,7 @@ a {
 
 .login-page {
     width: 100vw;
+    max-width: 100%;
     height: 75vh;
     display: flex;
     flex-direction: column;
